Corrected button style and declared dialogStyle for ManageModelsDialog. This fixes broken layout see when user clicks: Import or view models.

--- a/src/sql/workbench/browser/modal/media/modal.css
+++ b/src/sql/workbench/browser/modal/media/modal.css
@@ -265,7 +265,7 @@
 	height: 24px;
 	padding-left: 20px;
 	padding-right: 20px;
-	width: 80px;
+	min-width: 80px;
 }
 
 .vs .monaco-text-button:focus {
